# news-pipeline

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
news_pipeline/: __init__.py  schema.py
news_pipeline/aggregation/: osint_indices.py
news_pipeline/clients/: qdrant.py  vllm.py
news_pipeline/ingest/: finnhub.py  newsapi.py  rss.py
news_pipeline/ingest/osint/: acled.py  gdelt.py  geopolitical_rss.py  reliefweb.py
news_pipeline/ingest/osint/cyber/: cisa.py  misp.py  otx.py  vendor_rss.py
news_pipeline/ingest/osint/sanctions/: eu.py  ofac.py  sec_enforcement.py  uk_hmt.py  un.py
news_pipeline/matching/: actors.py  categories.py  geo.py  lang.py  tickers.py
news_pipeline/nlp/: ner.py
news_pipeline/osint/: pipeline.py
news_pipeline/scoring/: client.py  composite.py  finbert.py  llm.py  vader.py
news_pipeline/social/: base.py  bluesky.py  finnhub_social.py  mastodon.py  reddit_praw.py  reddit_public.py  stocktwits.py  telegram.py
