[project]
name = "news-pipeline"
version = "0.1.0"
description = "Shared news/sentiment ingest, matching, and scoring — consumed by polymarket-agent and Project-StockPrediction"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "feedparser>=6.0",
    "vaderSentiment>=3.3",
    # Option A: vLLM + Qdrant infrastructure
    "qdrant-client>=1.9",
]

[project.optional-dependencies]
finbert = ["transformers>=4.41", "torch>=2.3"]
reddit = ["praw>=7.7"]

[tool.hatch.build.targets.wheel]
packages = ["news_pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
